start login and home pages

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<div class="home-page">
+    <header class="hero-section">
+        <h1>Welcome to the Authentication Example</h1>
+        <p>Please log in to continue.</p>
+        <div class="auth-buttons">
+            <a routerLink="/login">Login</a>
+        </div>
+    </header>
+</div>
