--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,30 @@
-<p>login works!</p>
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="login-form">
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" id="email" formControlName="email" class="form-control">
+      <div class="error-message" *ngIf="loginForm.get('email')?.invalid && (loginForm.get('email')?.dirty || loginForm.get('email')?.touched)">
+        <div *ngIf="loginForm.get('email')?.hasError('required')">
+          Email is required
+        </div>
+        <div *ngIf="loginForm.get('email')?.hasError('email')">
+          Not a valid email
+        </div>
+      </div>
+    </div>
+  
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input type="password" id="password" formControlName="password" class="form-control">
+      <div class="error-message" *ngIf="loginForm.get('password')?.invalid && (loginForm.get('password')?.dirty || loginForm.get('password')?.touched)">
+        <div *ngIf="loginForm.get('password')?.hasError('required')">
+          Password is required
+        </div>
+        <div *ngIf="loginForm.get('password')?.hasError('minlength')">
+          Password should have at least 6 characters
+        </div>
+      </div>
+    </div>
+  
+    <button type="submit" [disabled]="!loginForm.valid" class="submit-btn">Submit</button>
+  </form>
+  
